--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,73 @@ body{
 	color: #fff !important;
 font-weight: 600;
 }
+
+body, html {
+  height: 100%;
+}
+
+.parallax1 {
+  /* The image used */
+  background-image: url("https://wallpaperbro.com/img/358204.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.parallax2 {
+	background-image: url("https://i.pinimg.com/originals/ca/89/91/ca8991bbfee53bddab853459d7815f5d.jpg");
+  height: 600px;
+	background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.parallax3 {
+  background-image: url("https://images.unsplash.com/photo-1533709752211-118fcaf03312?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
+  height: 600px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.about, .hacktivity{
+  width: 900px;
+  height:500px;
+  margin: 0 auto;
+  padding: 50px;
+}
+
+.about h1{
+  font-family: 'Roboto Mono', sans-serif;
+  font-size: 50px;
+}
+
+.about p{
+  font-family: 'Roboto Mono', sans-serif;
+  font-size: 25px;
+}
+
+.welcome{
+
+  position: absolute; /* Position the background text */
+  bottom: 0; /* At the bottom. Use top:0 to append it to the top */
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  color: #f1f1f1; /* Grey text */
+  width: 100%; /* Full width */
+  padding: 20px; /* Some padding */
+  height:250px;
+  text-align: right;
+}
+
+.welcome h1{
+  font-size:100px;
+}
