--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body{
 	font-weight: bold;
 }
 
+ nav{
+	 background: rgba(0, 0, 0, 0.5);
+ }
+
 .navbar-brand {
 	text-align: center;
 }
@@ -18,6 +22,7 @@ body{
 
 .nav-item:hover{
 	background-color: black;
+	color: lime;
 }
 
 
@@ -49,7 +54,16 @@ body, html {
 }
 
 .parallax3 {
-  background-image: url("https://images.unsplash.com/photo-1533709752211-118fcaf03312?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
+  background-image: url("https://www.pixelstalk.net/wp-content/uploads/2016/06/HD-Technology-Photo.jpg");
+  height: 600px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.parallax4 {
+  background-image: url("http://wallpapersprinted.com/download/2/keyboard_4-wallpaper-3840x2400.jpg");
   height: 600px;
   background-attachment: fixed;
   background-position: center;
